deploy/app-pedidos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rango-front
  namespace: rango-prod
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: rango.eduardotartas.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-pedidos-front-service
            port:
              number: 80
